package com.atguigu.strategy;

public class WildDuck extends Duck {
    @Override
    public void display() {
        System.out.println("这是野鸭");
    }
}
