@startuml

title __STRATEGY's Class Diagram__\n

  namespace com.atguigu.strategy {
    abstract class com.atguigu.strategy.Duck {
        + Duck()
        {abstract} + display()
        + fly()
        + quack()
        + swim()
    }
  }
  

  namespace com.atguigu.strategy {
    class com.atguigu.strategy.PekingDuck {
        + display()
        + fly()
    }
  }
  

  namespace com.atguigu.strategy {
    class com.atguigu.strategy.ToyDuck {
        + display()
        + fly()
        + quack()
        + swim()
    }
  }
  

  namespace com.atguigu.strategy {
    class com.atguigu.strategy.WildDuck {
        + display()
    }
  }
  

  com.atguigu.strategy.PekingDuck -up-|> com.atguigu.strategy.Duck
  com.atguigu.strategy.ToyDuck -up-|> com.atguigu.strategy.Duck
  com.atguigu.strategy.WildDuck -up-|> com.atguigu.strategy.Duck


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
